# routes/invoice_reservasi.go
@@ -20,5 +20,8 @@ func (p *InvoiceReservasi) SetupRoutes(router *gin.RouterGroup) {
 	router.GET("/invoice-reservasi", middleware.JWTMiddleware([]string{"admin", "user"}), p.ctrlInvoiceReservasi.FindAll)
 	router.GET("/invoice-reservasi/:id", middleware.JWTMiddleware([]string{"admin", "user"}), p.ctrlInvoiceReservasi.FindByID)
 	router.PUT("/invoice-reservasi/:id", middleware.JWTMiddleware([]string{"admin", "user"}), p.ctrlInvoiceReservasi.Update)
+	router.PUT("/invoice-reservasi/:id/file", middleware.JWTMiddleware([]string{"admin", "user"}), p.ctrlInvoiceReservasi.UpdateFile)
+	router.PUT("/invoice-reservasi/:id/confirm", middleware.JWTMiddleware([]string{"admin"}), p.ctrlInvoiceReservasi.VerifikasiInvoice)
+	router.PUT("/invoice-reservasi/:id/reject", middleware.JWTMiddleware([]string{"admin"}), p.ctrlInvoiceReservasi.TolakInvoice)
 	router.DELETE("/invoice-reservasi/:id", middleware.JWTMiddleware([]string{"superadmin"}), p.ctrlInvoiceReservasi.Delete)
 }
